--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DATABASE_URL=mongodb+srv://root:E0ceZYbjmGg8oLgZ@cluster0.z0jza.mongodb.net/uptask_mern
 URL_FRONTEND=http://127.0.0.1:5173
+URL_FRONTEND_V2=http://localhost:5173
 
 SMTP_HOST=sandbox.smtp.mailtrap.io
 SMTP_PORT=2525
